# smartWatch

./: .gitignore  GPIO_usage  README.md  measurements  partlist.ods
firmware/: .gitignore  CMakeLists.txt  prj.conf  todo
firmware/boards/: adafruit_feather_nrf52840.overlay
firmware/boards/arm/smartWatch/: Kconfig  board.cmake  smartWatch-pinctrl.dtsi
firmware/boards/arm/smartWatch/support/: ft2232_swd.cfg  openocd.cfg
firmware/boards/custom/smartWatch/: Kconfig  Kconfig.smartWatch  board.cmake  board.yml  smartWatch-pinctrl.dtsi  smartWatch.dts  smartWatch.yaml  smartWatch_defconfig
firmware/boards/custom/smartWatch/support/: ft2232-swd.cfg  openocd_ft2232.cfg
firmware/src/: main.c
firmware/src/lib/: lib.h
firmware/src/lib/adc/: adc.c  adc.h
firmware/src/lib/gpio/: gpio.c  gpio.h
firmware/src/lib/mxc400/: mxc400.c  mxc400.h
firmware/src/lib/pca9957/: pca9957.c  pca9957.h  pca9957_wrapper.c  pca9957_wrapper.h
firmware/src/lib/rtc/: rtc.c
firmware/src/lib/timer/: rtc.c  timer.c  timer.h
pcb/: bom.csv  (+14 more)
src/app/: CMakeLists.txt  prj.conf
src/app/boards/arm/smartWatch/: Kconfig.board  Kconfig.defconfig  smartWatch.dts  smartWatch.yaml  (+1 more)
src/app/src/: adc.c  adc.h  gpio.c  gpio.h  header.h  main.c  mxc400.c  mxc400.h  pca9957.c  pca9957.h  pca9957_wrapper.c  rtc.c  rtc.h
src/app/src/lib/: lib.h
src/application/: CMakeLists.txt  adafruit_feather_nrf52840.overlay  prj.conf  smartWatch.overlay
src/application/src/: adc.c  adc.h  gpio.c  gpio.h  header.h  main.c  mxc400.c  mxc400.h  pca9957.c  pca9957.h  pca9957_wrapper.c  pca9957_wrapper.h
(+779 files in other folders)
